test/integration/ingress/manifests/basic/ingressclass_added/ic-barrier.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: barrier
spec:
  controller: haproxy.org/ingress-controller
