test/integration/ingress/manifests/basic/ingressclass_added/ic-target.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: target
spec:
  controller: haproxy.org/ingress-controller
