test/integration/ingress/manifests/basic/ingressclass_added/svc-barrier.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: http-echo-barrier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo-barrier
  template:
    metadata:
      labels:
        app: http-echo-barrier
    spec:
      containers:
        - name: http-echo
          image: "haproxytech/http-echo:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: http-echo-barrier
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: http-echo-barrier
